--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,18 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: radiotonghop
+github_username:  radiotonghop
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-awesome
 plugins:
   - jekyll-feed
+
+sass:
+  style: compressed
+  sass_dir: _sass
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
